<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<artifactId>siga-doc</artifactId>
		<groupId>siga</groupId>
		<version>${revision}</version>
	</parent>

	<modelVersion>4.0.0</modelVersion>

	<artifactId>siga-ex</artifactId>
	
	<properties>
		<openhtml.version>1.0.8</openhtml.version>
	    <maven.compiler.source>1.8</maven.compiler.source>
	    <maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-antrun-plugin</artifactId>
					<executions>
						<execution>
							<phase>process-classes</phase>
							<goals>
								<goal>run</goal>
							</goals>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>org.javassist</groupId>
							<artifactId>javassist</artifactId>
							<version>3.18.1-GA</version>
							<scope>compile</scope>
						</dependency>
						<dependency>
							<groupId>siga</groupId>
							<artifactId>siga-ex</artifactId>
							<version>${revision}</version>
						</dependency>
					</dependencies>
				</plugin>
	 		</plugins>
	 	</pluginManagement>
	</build>

	<dependencies>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
		</dependency>
		<dependency>
			<groupId>net.sf.kxml</groupId>
			<artifactId>kxml2</artifactId>
		</dependency>
		<dependency>
			<groupId>org.eclipse.birt.runtime.3_7_1</groupId>
			<artifactId>Tidy</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jboss.spec.javax.servlet</groupId>
			<artifactId>jboss-servlet-api_4.0_spec</artifactId>
		</dependency>
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>fop</artifactId>
			<scope>provided</scope>
    	</dependency>

		<dependency>
			<groupId>org.ccil.cowan.tagsoup</groupId>
			<artifactId>tagsoup</artifactId>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.cssparser</groupId>
			<artifactId>cssparser</artifactId>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.htmlcleaner</groupId>
			<artifactId>htmlcleaner</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.axis</groupId>
			<artifactId>axis</artifactId>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>

		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>core</artifactId>
		</dependency>

		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>javase</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.xml</groupId>
			<artifactId>jaxrpc-api</artifactId>
		</dependency>

		<dependency>
			<groupId>com.auth0</groupId>
			<artifactId>java-jwt</artifactId>
			<version>2.3.0</version>
		</dependency>



		<!-- Siga -->
		<dependency>
			<groupId>siga</groupId>
			<artifactId>siga-cp</artifactId>
		</dependency>
		<dependency>
			<groupId>siga</groupId>
			<artifactId>siga-ext</artifactId>
		</dependency>
		<dependency>
			<groupId>siga</groupId>
			<artifactId>siga-integracao</artifactId>
		</dependency>

		<!-- CDI -->
		<dependency>
			<groupId>org.jboss.spec.javax.ejb</groupId>
			<artifactId>jboss-ejb-api_3.2_spec</artifactId>
			<scope>provided</scope>
		</dependency>
		<!-- habilitar para usar ExDaoTest.java <dependency> <groupId>com.oracle</groupId> 
			<artifactId>ojdbc6</artifactId> <version>11.2.0.3.0</version> <scope>compile</scope> 
			</dependency> -->
			
		<dependency>
			<groupId>br.jus.trf2.xjus</groupId>
			<artifactId>x-jus-record-api</artifactId>
		</dependency>
		
		<dependency>
			<groupId>com.crivano</groupId>
			<artifactId>swaggerservlet</artifactId>
		</dependency>

		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>5.5.13.3</version>
		</dependency>
		
 		<dependency>
			<!-- ALWAYS required, usually included transitively. -->
			<groupId>com.openhtmltopdf</groupId>
			<artifactId>openhtmltopdf-core</artifactId>
			<version>${openhtml.version}</version>
 		</dependency>

		<dependency>
			<!-- Required for PDF output. -->
			<groupId>com.openhtmltopdf</groupId>
			<artifactId>openhtmltopdf-pdfbox</artifactId>
			<version>${openhtml.version}</version>
		</dependency>

 		<dependency>
			<!-- Optional, leave out if you do not need logging via slf4j. -->
			<groupId>com.openhtmltopdf</groupId>
			<artifactId>openhtmltopdf-slf4j</artifactId>
			<version>${openhtml.version}</version>
 		</dependency>
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>20.0</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-search-orm</artifactId>
			<version>5.10.11.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.spec.javax.annotation</groupId>
			<artifactId>jboss-annotations-api_1.3_spec</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

</project>